very rudimentary single alarm structure

--- a/index.html
+++ b/index.html
@@ -22,19 +22,8 @@
 </head>
 <body>
 
-
-<div id="currentTime">
-
-</div>
-
-
-
-
-
-
-
-
-
+<div id="currentTime"></div>
+<div id="alarmNotification"></div>
 
 <script src="js/vendor/jquery-1.9.1.min.js"></script>
 <script src="js/main.js"></script>
