set single alarm plumbing in place date compares ignore milliseconds, alarm can be set only to :00 secs

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 <body>
 
 <div id="currentTime"></div>
+<form id="alarmSetter" action="">
+    <select name="hourSet" id="hourSet"></select>
+    <select name="minuteSet" id="minuteSet"></select>
+    <label for="minuteSet">:00</label>
+    <button id="alarmSetButton" type="submit">Set</button>
+</form>
 <div id="alarmNotification"></div>
 
 <script src="js/vendor/jquery-1.9.1.min.js"></script>
