work in progress added a bunch of sounds added soundmanager2 js and swf files and started integrating it slowly implemented deferred object so doc.ready code fires after sm2config is done

--- a/index.html
+++ b/index.html
@@ -27,12 +27,18 @@
     <select name="hourSet" id="hourSet"></select>
     <select name="minuteSet" id="minuteSet"></select>
     <label for="minuteSet">:00</label>
+    <select name="tuneSet" id="tuneSet"></select>
     <button id="alarmSetButton" type="submit">Set</button>
 </form>
-<div id="alarmNotification"></div>
+
+
+
 
 <script src="js/vendor/jquery-1.9.1.min.js"></script>
+
+<script src="js/vendor/soundmanager2.js"></script>
 <script src="js/main.js"></script>
+
 
 </body>
 </html>
